--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,41 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  background-color: rgb(0, 42, 60);
+  color: antiquewhite;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+form {
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.user-info {
+  margin-bottom: 10px;
+  outline: none;
+  border: 1px solid rgb(255, 189, 134);
+  border-radius: 5px;
+  width: 200px;
+  height: 20px;
+}
+
+input[type="submit"] {
+  background-color: rgb(137, 62, 0);
+  color: aliceblue;
+  padding: 5px 10px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+}
+
+.item {
+  text-align: center;
+  width: 300px;
+  margin: 10px auto;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border: 1px solid rgb(255, 189, 134);
 }
